# ParkIt

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.js  jest.config.js  package.json  testSendEmail.js
backend/controllers/: auth.controller.js  badge.controller.js  claim.controller.js  cron.js  lpr.controller.js  notification.controller.js  parking.controller.js  parkingSpot.controller.js  payement.controller.Js  payment.controller.js  reclamation.controller.js  reservation.controller.js  review.controller.js  user.controller.js  vehicule.controller.js  voice.controller.js
backend/middleware/: auth.js
backend/models/: badge.model.js  claim.model.js  notification.model.js  parking.model.js  parkingSpot.model.js  reclamation.model.js  reservation.model.js  review.model.js  user.model.js  vehicule.model.js
backend/routes/: auth.route.js  badge.route.js  claim.route.js  lpr.route.js  notification.route.js  parking.routes.js  parkingSpot.route.js  payment.route.js  reclamation.route.js  reservation.route.js  review.route.js  user.route.js  userRoutes.js  (+2 more)
docs/: Guide ESP32.docx  auth-api.md  user.md
facereco_py/: face_utils.py  main.py  requirements.txt  test_face_recog.py
frontend/: Dockerfile  env.d.ts  package.json  tsconfig.json
ia-reclamation/: .dockerignore  Dockerfile  car_classifier.py  entrypoint.sh  helmi.py  model_server.py  requirements.txt
lpr-python/: .dockerignore  Dockerfile  app.py  requirements.txt
voice-assistant/: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  pyproject.toml  requirements.txt  tts.py
(+173 files in other folders)
